# cookieCutterTest

./: cookiecutter.json
{{cookiecutter.sdk_name}}/: .pre-commit-config.yaml  pyproject.toml
{{cookiecutter.sdk_name}}/tests/: __init__.py  test_core.py
