[project]
name = "{{cookiecutter.sdk_name}}"
version = "0.1"
description = ""
dependencies = ["numpy==1.21.0"]
authors = ["{{ cookiecutter.admin_name }} <{{ cookiecutter.admin_email }}>"]
packages = [
    { include = "{{cookiecutter.library_name}}" },
]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true


[tool.ruff]
src = ["{{cookiecutter.library_name}}"]
target-version = "py38"

[tool.ruff.lint]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["{{cookiecutter.library_name}}"]

[tool.ruff.lint.pydocstyle]
convention = "google"
